Show file conflicts and allow installation into non-empty directory
